# ffi-rs

./: Cargo.toml  cliff.toml  deny.toml
algo/: Cargo.toml
algo/src/: lib.rs  matrix.rs  vector.rs
node-binding/: Cargo.toml  index.d.ts  index.js
python-binding/: Cargo.toml  pyproject.toml
python-binding/src/: lib.rs  matrix.rs
